<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/profile_screan" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@color/colorPrimary"
            android:orientation="vertical"
            android:layout_marginTop="400dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="?android:attr/listDivider" />
            <EditText
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:id="@+id/editPersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/your_name"
                android:inputType="textPersonName"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />
            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/your_phone"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />


            <EditText
                android:id="@+id/editPersonPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/whatsapp_number"
                android:inputType="numberDecimal"
                android:maxLength="11"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />
            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/your_address"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />


            <EditText
                android:id="@+id/editPersonaddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Address"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:gravity="start|top"
                android:inputType="textMultiLine" />

            <View
                android:id="@+id/divider4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <Button
                android:id="@+id/save_profile_data"
               android:onClick="saveProfileInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/save_data"
                android:padding="22dp"
                android:textColor="#ffffff"
                android:backgroundTint="@color/colorPrimaryDark"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="?android:attr/listDivider" />
        </LinearLayout>


</FrameLayout>