<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PayingActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_margin="20dp"
            style="@style/text_button_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delivery_address" />

        <Button
            style="@style/button_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/orderbuttonshape"
            android:drawableLeft="@drawable/address_icon"
            android:onClick="openProfile"
            android:padding="20dp"
            android:text="@string/add_delivery_address"
            android:textColor="#000" />

        <Button
            style="@style/button_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/orderbuttonshape"
            android:drawableLeft="@drawable/address_icon"
            android:onClick="cashOndelivery"
            android:padding="20dp"
            android:text="@string/cash_on_delivery"
            android:textColor="#000" />

        <Button
            android:id="@+id/addCard"
            style="@style/button_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/orderbuttonshape"
            android:drawableLeft="@drawable/address_icon"
            android:padding="20dp"
            android:text="@string/debit_credit_card"
            android:textColor="#000" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/food_add_to_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonshape"
            android:text="Total"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/price"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/food_price_final"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="32dp"
            android:gravity="center"
            android:text="TextView"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="@id/price"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.533" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>