<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/button_category"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageButton
                        android:onClick="openCategory"
                        android:id="@+id/burger"
                        android:layout_width="wrap_content"
                        android:layout_height="220dp"
                        app:srcCompat="@drawable/burger" />

                    <TextView
                        style="@style/text_button_category"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/burger" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/button_category"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageButton
                        android:onClick="openCategory"
                        android:id="@+id/pizza"
                        android:layout_width="wrap_content"
                        android:scaleType="center"
                        android:layout_height="220dp"
                        app:srcCompat="@drawable/pizza" />

                    <TextView
                        style="@style/text_button_category"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/pizza" />

                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/button_category"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageButton
                        android:onClick="openCategory"
                        android:id="@+id/crepe"
                        android:layout_width="wrap_content"
                        android:layout_height="220dp"
                        app:srcCompat="@drawable/crepe" />

                    <TextView
                        style="@style/text_button_category"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/crepe" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/button_category"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageButton
                        android:onClick="openCategory"
                        android:id="@+id/meel"
                        android:layout_width="match_parent"
                        android:layout_height="220dp"
                        app:srcCompat="@drawable/meal"
                        android:scaleType="center"/>

                    <TextView
                        style="@style/text_button_category"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/meal" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/button_category"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/sandwish"
                        android:layout_width="wrap_content"
                        android:layout_height="220dp"
                        app:srcCompat="@drawable/sandwish" />

                    <TextView
                        style="@style/text_button_category"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sandwish" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/button_category"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageButton
                        android:onClick="openCategory"
                        android:id="@+id/appetizer"
                        android:layout_width="wrap_content"
                        android:layout_height="220dp"
                        app:srcCompat="@drawable/appetizer" />

                    <TextView
                        style="@style/text_button_category"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/appetizer" />

                    <androidx.legacy.widget.Space
                        android:layout_width="match_parent"
                        android:layout_height="65dp"/>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>



    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#B4EAF1"
        android:layout_alignBottom="@id/scrollView"
        app:menu="@menu/bottom_menu" />




</RelativeLayout>