<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FoodDescription">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4">

        <ImageView
            android:layout_gravity="center"
            android:id="@+id/food_image_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/blackforest_moussecake" />
        <ImageView
            android:id="@+id/imageView3"
            android:scaleType="fitXY"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/frame" />

        <CheckBox
            android:id="@+id/favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:button="@drawable/like"
            android:checked="false"
            android:text="@string/favorite"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp"
            android:textStyle="italic" />
    </FrameLayout>
    <TextView
        android:id="@+id/food_name_description"
        style="@style/text_button_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:text="TextView"
        android:textSize="40dp" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="3"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        tools:ignore="UseSwitchCompatOrMaterialXml">
        <TextView
            android:id="@+id/food_description"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="( slammy , sauce , cheeder , BBQ )"
            android:textSize="20dp" />


        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="?android:attr/listDivider" />

        <Switch
            android:theme="@style/SCBSwitch"
            android:id="@+id/radioChipSize"
            style="@style/text_button_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="comboSize"
            android:text="@string/bigger_size"
            android:textColor="#7D86DD" />

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="?android:attr/listDivider"
            android:layout_marginBottom="20dp"/>



    </LinearLayout>

    <LinearLayout
            android:padding="10dp"
        android:layout_marginBottom="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button

                android:id="@+id/minus"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="-"
                style="@style/button_category"
                android:background="@drawable/circledshape"/>

            <TextView
                android:id="@+id/food_quantity"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="1"
                style="@style/text_button_category" />

            <Button
                android:id="@+id/plus"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="+"
                style="@style/button_category"
                android:background="@drawable/circledshape"/>



    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/price"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp">

        <Button
            android:id="@+id/food_add_to_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonshape"
            android:text="@string/add_to_cart"
            android:textColor="#7D86DD"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="@id/price"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/food_price_description"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="TextView"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="@id/price"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</LinearLayout>